--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hello, This is Arinze Jotham's DevOps submission for the Balanceè internship</h1>
+    <h1>Hello, This is Jotham Arinze DevOps submission for the Balanceè internship</h1>
   </div>
 </body>
 </html>
